Fix robocopy on network

--- a/Src/Canvas/CanvasBin/CanvasBin.csproj
+++ b/Src/Canvas/CanvasBin/CanvasBin.csproj
@@ -135,9 +135,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>robocopy "$(SolutionDir)..\..\Compression\$(Platform)\$(Configuration)" . FileCompression.dll FileCompression.pdb
-
-if %25ERRORLEVEL%25 EQU 1 exit 0</PostBuildEvent>
+    <PostBuildEvent>copy /y "$(SolutionDir)..\..\Compression\$(Platform)\$(Configuration)\FileCompression.dll" $(TargetDir)
+copy /y "$(SolutionDir)..\..\Compression\$(Platform)\$(Configuration)\FileCompression.pdb" $(TargetDir)
+copy /y "$(SolutionDir)..\..\packages\FileCompression\libFileCompression.so" $(TargetDir)
+</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
