Adapt LoessInterpolator to enable model training and prediction on new x values. Add LoessGCNormalizer stub.

--- a/Src/Canvas/CanvasClean/CanvasClean.csproj
+++ b/Src/Canvas/CanvasClean/CanvasClean.csproj
@@ -85,6 +85,9 @@
       <Link>Properties\IsasVersionInfo.cs</Link>
     </Compile>
     <Compile Include="CanvasClean.cs" />
+    <Compile Include="EnrichmentUtilities.cs" />
+    <Compile Include="LoessGCNormalizer.cs" />
+    <Compile Include="LoessInterpolator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
