--- a/Src/Canvas/CanvasTest/CanvasTest.csproj
+++ b/Src/Canvas/CanvasTest/CanvasTest.csproj
@@ -111,6 +111,7 @@
     <Compile Include="TestCanvasSomatic.cs" />
     <Compile Include="TestSegments.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ILMNcommon\ILMNcommon.csproj">
