--- a/Src/Canvas/CanvasCommon/CanvasCommon.csproj
+++ b/Src/Canvas/CanvasCommon/CanvasCommon.csproj
@@ -73,6 +73,7 @@
     <Compile Include="CanvasSegment.cs" />
     <Compile Include="CanvasVersionInfo.cs" />
     <Compile Include="CnvType.cs" />
+    <Compile Include="DensityClustering.cs" />
     <Compile Include="GaussianMixtureModel.cs" />
     <Compile Include="GenomicBin.cs" />
     <Compile Include="IO.cs" />
