Update nuspec and targets files

--- a/Src/Canvas/Canvas/Canvas.targets
+++ b/Src/Canvas/Canvas/Canvas.targets
@@ -3,7 +3,7 @@
   <ItemGroup>
     <NativeLibs Include="$(MSBuildThisFileDirectory)**\*.dll" />
     <Content Include="@(NativeLibs)">
-      <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
+      <Link>Canvas\%(RecursiveDir)%(FileName)%(Extension)</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
