Fix Isas.shared project file

--- a/Src/Isas.Shared/Isas.Shared.csproj
+++ b/Src/Isas.Shared/Isas.Shared.csproj
@@ -88,16 +88,17 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Mono.Posix">
-      <HintPath>..\packages\mono\Mono.Posix.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="Mono.Posix, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
+      <HintPath>..\Canvas\Canvas\packages\Mono.Posix.4.0.0.0\lib\net40\Mono.Posix.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\JsonNet\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\Canvas\Canvas\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="protobuf-net, Version=2.0.0.668, Culture=neutral, PublicKeyToken=257b51d87d2e4d67, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Protobuf\protobuf-net.dll</HintPath>
+      <HintPath>..\Canvas\Canvas\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -175,10 +176,6 @@
     <ProjectReference Include="..\ILMNcommon\ILMNcommon.csproj">
       <Project>{6848DA28-BACA-4E4D-9E1D-BAD1E7CB9CDE}</Project>
       <Name>ILMNcommon</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SampleSheet\SampleSheet.csproj">
-      <Project>{f310b4ef-80ca-4486-93a3-7e028edcd8b3}</Project>
-      <Name>SampleSheet</Name>
     </ProjectReference>
     <ProjectReference Include="..\SequencingFiles\SequencingFiles.csproj">
       <Project>{3eae6805-e445-4102-87c1-f57e20677778}</Project>
