Use proper version number from AssemblyInformationVersion

--- a/Src/Canvas/Canvas/Canvas.csproj
+++ b/Src/Canvas/Canvas/Canvas.csproj
@@ -130,6 +130,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Canvas.nuspec">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Canvas.targets" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
