--- a/Src/Canvas/CanvasSomaticCaller/CanvasSomaticCaller.csproj
+++ b/Src/Canvas/CanvasSomaticCaller/CanvasSomaticCaller.csproj
@@ -74,12 +74,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="SomaticCallerParameters.json" />
+    <None Include="SomaticCallerParameters.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ILMNcommon\ILMNcommon.csproj">
       <Project>{6848da28-baca-4e4d-9e1d-bad1e7cb9cde}</Project>
       <Name>ILMNcommon</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Isas.Shared\Isas.Shared.csproj">
+      <Project>{f2063ff3-61a7-4084-845d-da591011e36f}</Project>
+      <Name>Isas.Shared</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\SequencingFiles\SequencingFiles.csproj">
       <Project>{3eae6805-e445-4102-87c1-f57e20677778}</Project>
@@ -92,7 +98,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy $(ProjectDir)\SomaticCallerParameters.json $(ProjectDir)$(OutDir)</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
