--- a/Src/Canvas/CanvasPartition/packages.config
+++ b/Src/Canvas/CanvasPartition/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="IlluminaCommon" version="1.5.0" targetFramework="net451" />
-  <package id="Isas.NumericalAnalysis" version="2.12.0-dev201604272100" targetFramework="net451" />
-  <package id="Isas.SequencingFiles" version="2.12.0-dev201604272100" targetFramework="net451" />
-  <package id="Isas.Shared" version="2.12.0-dev201604272100" targetFramework="net451" />
+  <package id="Isas.NumericalAnalysis" version="2.12.0" targetFramework="net451" />
+  <package id="Isas.SequencingFiles" version="2.12.0" targetFramework="net451" />
+  <package id="Isas.Shared" version="2.12.0" targetFramework="net451" />
   <package id="MathNet.Numerics" version="3.10.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net451" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net451" />
