--- a/Src/Canvas/Canvas/Canvas.nuspec
+++ b/Src/Canvas/Canvas/Canvas.nuspec
@@ -14,7 +14,7 @@
   </metadata>
   
   <files>
-    <file src="..\x64\Release\*" target="build" />
+    <file src="..\x64\Release\*" target="build/Canvas" />
     <file src="Canvas.targets" target="build/Canvas.targets" />	
   </files>	
 
