--- a/Src/Canvas/Canvas/Canvas.csproj
+++ b/Src/Canvas/Canvas/Canvas.csproj
@@ -177,8 +177,8 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>SET PDB2MDB=$(SolutionDir)Mono.pdb2mdb\pdb2mdb.exe
-cd $(SolutionDir)\x64\Release
-powershell -Command "Get-ChildItem -Recurse -Include *.dll, *.exe -Exclude FileCompression.dll, protobuf-net.dll, Mono.Posix.dll, Newtonsoft.Json.dll, MathNet.Numerics.dll | Foreach {%25PDB2MDB%25 $_.fullname}"
+powershell -Command "Set-Location $(SolutionDir)..\x64\Release; Get-ChildItem -Recurse -Include *.dll, *.exe -Exclude FileCompression.dll, protobuf-net.dll, Mono.Posix.dll, Newtonsoft.Json.dll, MathNet.Numerics.dll | Foreach {%25PDB2MDB%25 $_.fullname}"
+powershell -Command "Set-Location $(SolutionDir)..\..\..\Tools\x64\Release; Get-ChildItem -Recurse -Include *.dll, *.exe -Exclude FileCompression.dll, protobuf-net.dll, Mono.Posix.dll, Newtonsoft.Json.dll, MathNet.Numerics.dll | Foreach {%25PDB2MDB%25 $_.fullname}"
 
 if ERRORLEVEL 1 (
     exit /b 1
