To sum-up the changes complete work on https://jira.illumina.com/browse/CANV-166 and https://jira.illumina.com/browse/CANV-167 and https://jira.illumina.com/browse/CANV-214 and include: 1) Subclonal variant info flag calculated via multivariant logistic regression (~76% cross validation accuracy on tHapMix training data) 2) Subclonal logistic regression parameters added to JSON 3) Improvbed density clastering for steps one and two above 4) New JSON for quality score
Next steps:
1) Add training sripts for clonality and qscores to CanvasTest to accompany executable changes
2) Update SDD
3) Rerun training after all the changes
4) Update parameters JSON if necessary

--- a/Src/Canvas/CanvasDiploidCaller/CanvasDiploidCaller.csproj
+++ b/Src/Canvas/CanvasDiploidCaller/CanvasDiploidCaller.csproj
@@ -61,6 +61,10 @@
       <HintPath>..\Canvas\packages\IlluminaCommon.1.5.0\lib\net40\IlluminaCommon.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Isas.Shared, Version=2.12.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\Canvas\packages\Isas.Shared.2.12.0\lib\net451\Isas.Shared.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\Canvas\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -75,6 +79,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
