Using Newtonsoft.Json for .Json parameter files

--- a/Src/Canvas/CanvasCommon/CanvasCommon.csproj
+++ b/Src/Canvas/CanvasCommon/CanvasCommon.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CanvasSegment.cs" />
+    <Compile Include="ClusterInfo.cs" />
     <Compile Include="QualityScoreParameters.cs" />
     <Compile Include="CanvasVersionInfo.cs" />
     <Compile Include="CnvType.cs" />
