--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# Python precompiled files
+*.pyc
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
