--- a/Src/Canvas/CanvasCommon/CanvasCommon.csproj
+++ b/Src/Canvas/CanvasCommon/CanvasCommon.csproj
@@ -62,6 +62,10 @@
       <HintPath>..\Canvas\packages\IlluminaCommon.1.5.0\lib\net40\IlluminaCommon.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Isas.Shared, Version=2.12.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\Canvas\packages\Isas.Shared.2.12.0\lib\net451\Isas.Shared.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\Canvas\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -86,6 +90,23 @@
   <ItemGroup>
     <Compile Include="CanvasSegment.cs" />
     <Compile Include="ClusterInfo.cs" />
+    <Compile Include="CommandLineParsing\CoreOptionTypes\DictionaryOption.cs" />
+    <Compile Include="CommandLineParsing\CoreOptionTypes\DirectoryOption.cs" />
+    <Compile Include="CommandLineParsing\CoreOptionTypes\FileOption.cs" />
+    <Compile Include="CommandLineParsing\CoreOptionTypes\FlagOption.cs" />
+    <Compile Include="CommandLineParsing\CoreOptionTypes\MultipleValueOptionInfo.cs" />
+    <Compile Include="CommandLineParsing\CoreOptionTypes\MultiValueOption.cs" />
+    <Compile Include="CommandLineParsing\CoreOptionTypes\Option.cs" />
+    <Compile Include="CommandLineParsing\CoreOptionTypes\OptionInfo.cs" />
+    <Compile Include="CommandLineParsing\CoreOptionTypes\RequiredMultiOptionInfo.cs" />
+    <Compile Include="CommandLineParsing\CoreOptionTypes\RequiredValueOptionInfo.cs" />
+    <Compile Include="CommandLineParsing\CoreOptionTypes\StringOption.cs" />
+    <Compile Include="CommandLineParsing\CoreOptionTypes\ValueOption.cs" />
+    <Compile Include="CommandLineParsing\CoreOptionTypes\ValueOptionInfo.cs" />
+    <Compile Include="CommandLineParsing\OptionProcessing\OptionCollection.cs" />
+    <Compile Include="CommandLineParsing\OptionProcessing\ParsingResult.cs" />
+    <Compile Include="CommandLineParsing\OptionProcessing\ResultCollection.cs" />
+    <Compile Include="CommandLineParsing\OptionProcessing\SuccessfulResultCollection.cs" />
     <Compile Include="QualityScoreParameters.cs" />
     <Compile Include="CanvasVersionInfo.cs" />
     <Compile Include="CnvType.cs" />
