--- a/Tools/EvaluateCNV/EvaluateCNV.csproj
+++ b/Tools/EvaluateCNV/EvaluateCNV.csproj
@@ -63,6 +63,10 @@
       <HintPath>..\..\Src\Canvas\Canvas\packages\IlluminaCommon.1.5.0\lib\net40\IlluminaCommon.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Isas.Shared, Version=2.12.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\..\Src\Canvas\Canvas\packages\Isas.Shared.2.12.0\lib\net451\Isas.Shared.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\Src\Canvas\Canvas\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
