--- a/Src/Canvas/CanvasCommon/CanvasCommon.csproj
+++ b/Src/Canvas/CanvasCommon/CanvasCommon.csproj
@@ -96,6 +96,7 @@
     <Compile Include="CopyNumberOracle.cs" />
     <Compile Include="PloidyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SortedList.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
