--- a/Src/Canvas/CanvasSmooth/packages.config
+++ b/Src/Canvas/CanvasSmooth/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Illumina.Common" version="1.10.0" targetFramework="net452" />
   <package id="IlluminaCommon" version="1.5.0" targetFramework="net452" />
   <package id="Isas.Shared" version="2.12.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
