--- a/Src/Canvas/CanvasPartition/CanvasPartition.csproj
+++ b/Src/Canvas/CanvasPartition/CanvasPartition.csproj
@@ -120,6 +120,7 @@
     <Compile Include="CanvasPartition.cs" />
     <Compile Include="CBSTStatistic.cs" />
     <Compile Include="ChangePoint.cs" />
+    <Compile Include="HMM.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
