--- a/Src/Canvas/CanvasDiploidCaller/CanvasDiploidCaller.csproj
+++ b/Src/Canvas/CanvasDiploidCaller/CanvasDiploidCaller.csproj
@@ -71,6 +71,10 @@
       <HintPath>..\Canvas\packages\Isas.Shared.2.37.0\lib\net451\Isas.Shared.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MathNet.Numerics, Version=3.13.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\Canvas\packages\MathNet.Numerics.3.13.0\lib\net40\MathNet.Numerics.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NDesk.Options, Version=0.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\Canvas\packages\NDesk.Options.0.2.1\lib\NDesk.Options.dll</HintPath>
       <Private>True</Private>
