--- a/Src/Canvas/CanvasDiploidCaller/packages.config
+++ b/Src/Canvas/CanvasDiploidCaller/packages.config
@@ -4,6 +4,7 @@
   <package id="Isas.FileCompression" version="2.43.0" targetFramework="net451" />
   <package id="Isas.SequencingFiles" version="2.43.0" targetFramework="net451" />
   <package id="Isas.Shared" version="2.37.0" targetFramework="net451" />
+  <package id="MathNet.Numerics" version="3.13.0" targetFramework="net451" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net451" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net451" />
