--- a/Src/Canvas/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
+++ b/Src/Canvas/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
@@ -101,7 +101,7 @@
     <Compile Include="PedigreeMember.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CopyNumberInfo.cs" />
+    <Compile Include="CopyNumberModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
