ignoring SmallPedigree.cs

--- a/.gitignore
+++ b/.gitignore
@@ -233,3 +233,5 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+/Src/Canvas/Canvas/SmallPedigreeWorkflow.cs
+/Src/Canvas/Canvas/SmallPedigreeCallset.cs
