multi-sample ploidyVCF support

--- a/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
+++ b/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
@@ -60,6 +60,7 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+    <Optimize>true</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>..\x64\Release\</OutputPath>
