--- a/Src/Canvas/CanvasPartition/packages.config
+++ b/Src/Canvas/CanvasPartition/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Combinatorics" version="1.0.3.2" targetFramework="net451" />
   <package id="Illumina.Common" version="1.11.0" targetFramework="net451" />
   <package id="Isas.FileCompression" version="2.43.0" targetFramework="net451" />
   <package id="Isas.NumericalAnalysis" version="2.30.0-dev201608181013" targetFramework="net451" />
