--- a/Src/Canvas/CanvasCommon/packages.config
+++ b/Src/Canvas/CanvasCommon/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Combinatorics" version="1.0.3.2" targetFramework="net451" />
   <package id="Illumina.Common" version="1.11.0" targetFramework="net451" />
   <package id="Isas.FileCompression" version="2.43.0" targetFramework="net451" />
   <package id="Isas.SequencingFiles" version="2.43.0" targetFramework="net451" />
   <package id="Isas.Shared" version="2.37.0" targetFramework="net451" />
+  <package id="MathNet.Numerics" version="3.13.0" targetFramework="net451" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net451" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net451" />
