--- a/Src/Canvas/CanvasPedigreeCaller/packages.config
+++ b/Src/Canvas/CanvasPedigreeCaller/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Combinatorics" version="1.0.3.2" targetFramework="net451" />
   <package id="Illumina.Common" version="1.19.6" targetFramework="net451" />
   <package id="Isas.FileCompression" version="2.63.0" targetFramework="net452" />
   <package id="Isas.SequencingFiles" version="2.63.0" targetFramework="net452" />
