--- a/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
+++ b/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.csproj
@@ -145,7 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CanvasPedigreeCaller.cs" />
-    <Compile Include="CnvDistribution.cs" />
+    <Compile Include="CopyNumberDistribution.cs" />
     <Compile Include="PedigreeMember.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
